v3.2 memory patch